# fortitude

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: build-and-test.yml  django.yml
docs/: roadmap.md
fortitude/: asgi.py  settings.py  urls.py  wsgi.py
fortitude/orthanc_manager/: admin.py  apps.py  errors.py  models.py  services.py  urls.py  views.py
fortitude/orthanc_manager/migrations/: 0001_initial.py  0002_auto_20210217_1435.py  0003_auto_20210217_1505.py  0004_remove_orthancinstance_aet.py
fortitude/orthanc_manager/tests/: test_models.py  test_services.py
fortitude/orthanc_manager/tests/api/: test_forward_call.py  test_get_instances_names.py  test_get_server_information.py  test_get_servers_names.py  util.py
fortitude/users/: admin.py  managers.py  middlewares.py  models.py  serializers.py  urls.py  validators.py  views.py
fortitude/users/migrations/: 0001_initial.py
fortitude/users/tests/: test_models.py  test_validators.py
fortitude/users/tests/api/: test_user_auth.py  test_user_creation.py
fortitude/users/tests/integration/: test_user_auth.py  test_user_creation.py
fortitude/users/tests/unit/: test_models.py  test_validators.py
